feat: return list of tasks with person info to tasks GET endpoint